Fix some issues

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ and open the template in the editor.
                     <div class="collapse navbar-collapse" id="main-menu">
                         <ul class="navbar-nav ml-auto mt-2">
                             <li class="nav-item">
-                                <a class="nav-link" href="#main-menu1">početna <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="http://localhost:8383/TrustIT/index.html">početna <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#about-us">o nama</a>
@@ -88,12 +88,12 @@ and open the template in the editor.
         <!--main start-->
         <main>
             <!--lead slider start-->
-            <section class="lead-slider-wrapper" id="main-menu1">
+            <section class="lead-slider-wrapper">
                 <ul class="owl-carousel list-unstyled lead-slider">
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url(img/slide-web-softver.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url(img/slider1.jpg)">
                         <div class="container">
-                            <p class="text-center text-white">TrustIT Company</p>
-                            <h2 class="text-center text-white text-uppercase animation" data-animation="zoom">web development</h2>
+                            <p class="text-center text-white">TrustIT</p>
+                            <h2 class="text-center text-white text-uppercase animation" data-animation="zoom">programiranje</h2>
                             <h3 class="text-center text-white animation" data-animation="zoom">
                                 TrustIT is a <span class="text-warning">slightly wonky</span> landing page template
                             </h3> 
@@ -103,10 +103,10 @@ and open the template in the editor.
                             </div>
                         </div>
                     </li>
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url(img/slide-web-softver.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(img/slider3.jpeg)">
                         <div class="container">
-                            <p class="text-center text-white">TrustIT Company</p>
-                            <h2 class="text-center text-white text-uppercase">web development</h2>
+                            <p class="text-center text-white">TrustIT</p>
+                            <h2 class="text-center text-white text-uppercase">dokument menadžment</h2>
                             <h3 class="text-center text-white animation" data-animation="zoom">
                                 TrustIT is a <span class="text-warning">slightly wonky</span> landing page template
                             </h3> 
@@ -116,10 +116,10 @@ and open the template in the editor.
                             </div>
                         </div>
                     </li>
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url(img/slide-web-softver.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(img/slider5.jpg)">
                         <div class="container">
-                            <p class="text-center text-white">TrustIT Company</p>
-                            <h2 class="text-center text-white text-uppercase">web development</h2>
+                            <p class="text-center text-white">TrustIT</p>
+                            <h2 class="text-center text-white text-uppercase">smart card rešenja</h2>
                             <h3 class="text-center text-white animation" data-animation="zoom">
                                 TrustIT is a <span class="text-warning">slightly wonky</span> landing page template
                             </h3> 
@@ -200,28 +200,27 @@ and open the template in the editor.
                 </div>
             </section><!--section about-us end-->
             <!--get started-->
-            <section class="get-started" style="background-image:linear-gradient(to right, rgba(21,164,250,0.35), rgba(21,164,250,0.35)), url(img/slide-web-softver.jpg)">
+            <section class="get-started" style="background-image:linear-gradient(to right, rgba(21,164,250,0.35), rgba(21,164,250,0.35)), url(img/slider1.jpg)">
                 <div class="container">
                     <div class="get-started-wrap text-center">
-                        <h2 class="text-white pb-4">
-                            TO GET STARTED
+                        <h2 class="text-white pb-4 text-uppercase">
+                            ZAŠTO BAŠ MI
                         </h2>
                         <div class="get-started-paragraph pb-4">
                             <p class="text-white">
-                                Tell us your thoughts, ideas and visions and let 
-                                TrustIT analyze and determine your needs to then 
-                                present you with options to take the next steps 
-                                to turn your concept into reality!
+                                Recite nam svoje misli, ideje i vizije i pustite 
+                                TrustIT da analizira i utvrdi vaše potrebe da Vam 
+                                predstavi mogucćnosti da preduzmete sledecće korake 
+                                da pretvorite vaš koncept u stvarnost!
                             </p>
                             <p class="text-white">
-                                Regardless of how big or small your project is, 
-                                TrustIT has the resources to provide you with 
-                                the best possible solution with the most qualified 
-                                staff at an unbelievable price!
+                                Bez obzira na to koliko je veliki ili mali Vaš projekat, 
+                                TrustIT ima resurse da vam pruži najbolje moguće rešenje 
+                                sa najkvalifikovanijim osobljem!
                             </p>
                         </div>
                         <div class="get-started-button text-center">
-                            <a href="#contact" class="">start now</a>
+                            <a href="#contact" class="">počni sada</a>
                         </div>
                     </div>
                 </div>    
@@ -275,7 +274,7 @@ and open the template in the editor.
                         <li data-category='#C41FC4'>
                             <div class="slider-item text-left bg-white">
                                 <a href="#">
-                                    <img src="img/partners/EDC_logo-300x38.png" alt="Datacard" class="img-partners"/>
+                                    <img src="img/partners/edc_logo-300x38.png" alt="Datacard" class="img-partners"/>
                                 </a>
                                 <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija TrustIT d.o.o. je zvanični distributer i partner američke 
                                     korporacije Entrust Datacard, svetskog lidera u delatnosti izdavanja 
@@ -375,7 +374,7 @@ and open the template in the editor.
             </section><!--partners section end-->
             <!--brochure start-->
             <section class="brochure">
-                
+
             </section><!--brochure end-->
             <!-- gallery start -->
             <section class="gallery-section text-center py-3 py-lg-5" id="gallery">
@@ -533,7 +532,7 @@ and open the template in the editor.
                     <div class="col-md-12 text-center footer-navigation my-3">
                         <ul>
                             <li>
-                                <a href="#main-menu1">početna</a>
+                                <a href="#main-menu">početna</a>
                             </li>
                             <li>
                                 <a href="#about-us">o nama</a>
