Finished kontakt page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html lang="en">
     <head>
         <title>TrustIT</title>
@@ -97,7 +93,7 @@ and open the template in the editor.
                             </div>
                         </div>
                     </li>
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70)), url(img/slider5.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url(img/slider5.jpg)">
                         <div class="container">
                             <p class="text-center text-white">TrustIT</p>
                             <h2 class="text-center text-white text-uppercase">dokument menadžment</h2>
@@ -286,7 +282,7 @@ and open the template in the editor.
                         <li data-category='#C41FC4'>
                             <div class="slider-item text-left bg-white">
                                 <a href="#">
-                                    <img src="img/partners/partneri-Kodak.jpg" alt="Kodak" class="img-partners"/>
+                                    <img src="img/partners/partneri-kodak.jpg" alt="Kodak" class="img-partners"/>
                                 </a>
                                 <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija TrustIT d.o.o. je jedini sertifikovani distributer za 
                                     Kodak Document Imagining program na tržištima Srbije i Crne Gore. 
@@ -555,7 +551,7 @@ and open the template in the editor.
                     <div class="col-md-12 text-center footer-navigation my-3">
                         <ul>
                             <li>
-                                <a href="#main-menu">početna</a>
+                                <a href="#main-menu" id="scrollLinkHome1">početna</a>
                             </li>
                             <li>
                                 <a href="#about-us">o nama</a>
@@ -600,11 +596,11 @@ and open the template in the editor.
                             <div class="col-md-6 mb-2 mb-md-0 px-0">
                                 <article class="cover-article d-flex align-items-center px-2">
                                     <div class="w-30">
-                                        <a href="#" class="fa fa-map-o text-white d-block"></a>
+                                        <a href="http://localhost:8383/TrustIT/kontakt.html" class="fa fa-map-o text-white d-block"></a>
                                     </div>
                                     <div class="w-70">
                                         <p class="text-white mb-0">TrustIT</p>
-                                        <a href="#" class="cover-link text-white d-block">Pronađite nas na mapi</a>
+                                        <a href="http://localhost:8383/TrustIT/kontakt.html" class="cover-link text-white d-block">Pronađite nas na mapi</a>
                                     </div>
                                 </article>
                             </div>
