Changing slider images

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
             <!--lead slider start-->
             <section class="lead-slider-wrapper">
                 <ul class="owl-carousel list-unstyled lead-slider">
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url(img/slider1.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70)), url(img/slider5.jpg)">
                         <div class="container">
                             <p class="text-center text-white">TrustIT</p>
                             <h2 class="text-center text-white text-uppercase animation" data-animation="zoom">programiranje</h2>
                             <h3 class="text-center text-white animation" data-animation="zoom">
-                                TrustIT is a <span class="text-warning">slightly wonky</span> landing page template
+                                Izrada <span class="text-warning">softvera</span>
                             </h3> 
                             <div class="lead-slider-links text-center">
                                 <a href="#" class="btn-slider">saznaj više</a>
@@ -93,12 +93,12 @@
                             </div>
                         </div>
                     </li>
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url(img/slider5.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/05.-Arhivske-kutije-1024x678.jpg)">
                         <div class="container">
                             <p class="text-center text-white">TrustIT</p>
                             <h2 class="text-center text-white text-uppercase">dokument menadžment</h2>
                             <h3 class="text-center text-white">
-                                TrustIT is a <span class="text-warning">slightly wonky</span> landing page template
+                                Pružanje <span class="text-warning">celovitog rešenja</span> za proces arhiviranja
                             </h3> 
                             <div class="lead-slider-links text-center">
                                 <a href="#" class="btn-slider">saznaj više</a>
@@ -106,12 +106,12 @@
                             </div>
                         </div>
                     </li>
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70)), url(img/slider6.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.65), rgba(0,0,0,0.85)), url(img/07-studentske-kartice-1024x576.jpg)">
                         <div class="container">
                             <p class="text-center text-white">TrustIT</p>
                             <h2 class="text-center text-white text-uppercase">smart card rešenja</h2>
                             <h3 class="text-center text-white">
-                                TrustIT is a <span class="text-warning">slightly wonky</span> landing page template
+                                Pružanje <span class="text-warning">rešenja</span> bazirana na Smart karticama
                             </h3> 
                             <div class="lead-slider-links text-center">
                                 <a href="#" class="btn-slider">saznaj više</a>
