Posting web site to Control Panel and adding scripts-connect.php script

--- a/kontakt.html
+++ b/kontakt.html
@@ -40,7 +40,7 @@ and open the template in the editor.
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-md navbar-light px-0" id="main-menu1">
                     <!--logo start-->
-                    <a class="navbar-brand" href="http://localhost:8383/TrustIT/index.html">
+                    <a class="navbar-brand" href="http://trustit.rs/index.html">
                         <img src="img/logo/Logo negativ.png" alt="Logo"/>
                         <!--<h1 class="text-white">TrustIT</h1>-->
                     </a><!--logo end-->
@@ -54,7 +54,7 @@ and open the template in the editor.
                     <div class="collapse navbar-collapse" id="main-menu">
                         <ul class="navbar-nav ml-auto mt-2">
                             <li class="nav-item">
-                                <a class="nav-link" href="http://localhost:8383/TrustIT/index.html">početna <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="http://trustit.rs/index.html">početna <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#about-us">o nama</a>
@@ -89,7 +89,7 @@ and open the template in the editor.
                     </p>
                     <div class="row">
                         <div class="col-12 col-lg-7">
-                            <form class="contact-form" method="post" action="">
+                            <form class="contact-form" method="post" action="scripts-contact.php">
                                 <div class="row">
                                     <div class="col-12 col-sm-6">
                                         <div class="form-group">
@@ -155,7 +155,7 @@ and open the template in the editor.
                                 <a href="https://www.facebook.com/PIS-Poslovni-Informacioni-Sistemi-419822691493357/" class="fa fa-facebook"></a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/QuantoxCom" class="fa fa-twitter"></a>
+                                <a href="#" class="fa fa-twitter"></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/company/pis---poslovno-informacioni-sistemi-d.o.o." class="fa fa-linkedin"></a>
