--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-md navbar-light px-0" id="main-menu1">
                     <!--logo start-->
-                    <a class="navbar-brand" href="http://localhost:8383/TrustIT/index.html">
+                    <a class="navbar-brand" href="http://trustit.rs/index.html">
                         <img src="img/logo/Logo negativ.png" alt="Logo"/>
                         <!--<h1 class="text-white">TrustIT</h1>-->
                     </a><!--logo end-->
@@ -82,10 +82,10 @@
                 <ul class="owl-carousel list-unstyled lead-slider">
                     <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70)), url(img/slider5.jpg)">
                         <div class="container">
-                            <p class="text-center text-white">TrustIT</p>
+                            <p class="text-center text-white">Trust IT</p>
                             <h2 class="text-center text-white text-uppercase animation" data-animation="zoom">programiranje</h2>
                             <h3 class="text-center text-white animation" data-animation="zoom">
-                                Izrada <span class="text-warning">softvera</span>
+                                Izrada <span class="text-warning">softvera</span>, modernih i funkcionalnih <span class="text-warning">web aplikacija</span>
                             </h3> 
                             <div class="lead-slider-links text-center">
                                 <a href="#" class="btn-slider">saznaj više</a>
@@ -95,7 +95,7 @@
                     </li>
                     <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/05.-Arhivske-kutije-1024x678.jpg)">
                         <div class="container">
-                            <p class="text-center text-white">TrustIT</p>
+                            <p class="text-center text-white">Trust IT</p>
                             <h2 class="text-center text-white text-uppercase">dokument menadžment</h2>
                             <h3 class="text-center text-white">
                                 Pružanje <span class="text-warning">celovitog rešenja</span> za proces arhiviranja
@@ -108,7 +108,7 @@
                     </li>
                     <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.65), rgba(0,0,0,0.85)), url(img/07-studentske-kartice-1024x576.jpg)">
                         <div class="container">
-                            <p class="text-center text-white">TrustIT</p>
+                            <p class="text-center text-white">Trust IT</p>
                             <h2 class="text-center text-white text-uppercase">smart card rešenja</h2>
                             <h3 class="text-center text-white">
                                 Pružanje <span class="text-warning">rešenja</span> bazirana na Smart karticama
@@ -503,7 +503,7 @@
                     </p>
                     <div class="row">
                         <div class="col-12 col-lg-7">
-                            <form class="contact-form" method="post" action="">
+                            <form class="contact-form" method="post" action="scripts-contact.php">
                                 <div class="row">
                                     <div class="col-12 col-sm-6">
                                         <div class="form-group">
@@ -524,7 +524,7 @@
                                         </div>
                                     </div>
                                     <div class="col-12">
-                                        <button class="btn btn-info px-5 text-uppercase">pošalji poruku</button>
+                                        <button class="btn btn-info px-5 text-uppercase" type="submit">pošalji poruku</button>
                                     </div>
                                 </div>
                             </form>  
@@ -579,7 +579,7 @@
                                 <a href="https://www.facebook.com/PIS-Poslovni-Informacioni-Sistemi-419822691493357/" class="fa fa-facebook"></a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/QuantoxCom" class="fa fa-twitter"></a>
+                                <a href="#" class="fa fa-twitter"></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/company/pis---poslovno-informacioni-sistemi-d.o.o." class="fa fa-linkedin"></a>
@@ -596,22 +596,22 @@
                             <div class="col-md-6 mb-2 mb-md-0 px-0">
                                 <article class="cover-article d-flex align-items-center px-2">
                                     <div class="w-30">
-                                        <a href="http://localhost:8383/TrustIT/kontakt.html" class="fa fa-map-o text-white d-block"></a>
+                                        <a href="http://trustit.rs/kontakt.html" target="_blank" class="fa fa-map-o text-white d-block"></a>
                                     </div>
                                     <div class="w-70">
                                         <p class="text-white mb-0">TrustIT</p>
-                                        <a href="http://localhost:8383/TrustIT/kontakt.html" class="cover-link text-white d-block">Pronađite nas na mapi</a>
+                                        <a href="http://trustit.rs/kontakt.html" target="_blank" class="cover-link text-white d-block">Pronađite nas na mapi</a>
                                     </div>
                                 </article>
                             </div>
                             <div class="col-md-6 px-0">
                                 <article class="cover-article1 d-flex align-items-center px-2">
                                     <div class="w-30">
-                                        <a href="#" class="fa fa-envelope text-white d-block"></a>
+                                        <a href="http://trustit.rs/kontakt.html" class="fa fa-envelope text-white d-block"></a>
                                     </div>
                                     <div class="w-70">
                                         <p class="text-white mb-0">TrustIT</p>
-                                        <a href="#" class="cover-link text-white d-block">Pošaljite nam E-mail</a>
+                                        <a href="http://trustit.rs/kontakt.html" class="cover-link text-white d-block">Pošaljite nam E-mail</a>
                                     </div>
                                 </article>
                             </div>
