--- a/successfuly_send_message.html
+++ b/successfuly_send_message.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>Hvala Vam!</title>	
 
-<h1>Uspešno poslata poruka!</h1>
-<p>Vaša poruka je uspešno poslata kompaniji Trust IT.</p>
+<h1>Uspesno poslata poruka!</h1>
+<p>Vasa poruka je uspesno poslata kompaniji Trust IT.</p>
 <p><a href="http://trustit.rs/index.html">Nazad</a>.</p>
