Fix some responsive issues

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
     <head>
         <title>TrustIT</title>
         <link rel="icon" type="image/png" href="/img/favicon/favicon.ico">
@@ -396,7 +400,7 @@
                 </div>
             </section><!--brochure end-->
             <!-- gallery start -->
-            <section class="gallery-section text-center py-3 py-lg-5" id="gallery">
+            <section class="gallery-section text-center py-4 py-lg-5" id="gallery">
                 <div class="container">
                     <h2 class="title pt-5 mb-4 lineAfter line-center text-uppercase">galerija</h2>
                     <div class="row">
@@ -548,27 +552,27 @@
                     <div class="col-md-12 text-center">
                         <img src="img/logo/Logo negativ.png" alt="TrustIT Logo"/>
                     </div>
-                    <div class="col-md-12 text-center footer-navigation my-3">
+                    <div class="col-md-12 text-left text-md-center footer-navigation my-3">
                         <ul>
-                            <li>
+                            <li class="mb-2 mb-md-0">
                                 <a href="#main-menu" id="scrollLinkHome1">početna</a>
                             </li>
-                            <li>
+                            <li class="mb-2 mb-md-0">
                                 <a href="#about-us">o nama</a>
                             </li>
-                            <li>
+                            <li class="mb-2 mb-md-0">
                                 <a href="#partners">partneri</a>
                             </li>
-                            <li>
+                            <li class="mb-2 mb-md-0">
                                 <a href="#broshure">brošure</a>
                             </li>
-                            <li>
+                            <li class="mb-2 mb-md-0">
                                 <a href="#gallery">galerija</a>
                             </li>
-                            <li>
+                            <li class="mb-2 mb-md-0">
                                 <a href="#">reference</a>
                             </li>
-                            <li>
+                            <li class="mb-2 mb-md-0">
                                 <a href="#contact">kontakt</a>
                             </li>
                         </ul>
