--- a/kontakt.html
+++ b/kontakt.html
@@ -60,7 +60,7 @@ and open the template in the editor.
                                 <a class="nav-link" href="#about-us">o nama</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">reference</a>
+                                <a class="nav-link" href="#activities">delatnosti</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#contact">kontakt</a>
