Finished adding about_us.html

--- a/contact_us.html
+++ b/contact_us.html
@@ -57,7 +57,7 @@ and open the template in the editor.
                                 <a class="nav-link" href="http://trustit.rs/index.html">početna <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#about-us">o nama</a>
+                                <a class="nav-link" href="http://trustit.rs/about_us.html" target="_blank">o nama</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#activities">delatnosti</a>
