--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ and open the template in the editor.
                                 Izrada <span class="text-warning">softvera</span>, modernih i funkcionalnih <span class="text-warning">web aplikacija</span>
                             </h3> 
                             <div class="lead-slider-links text-center">
-                                <a href="#" class="btn-slider">saznaj više</a>
+                                <a href="http://trustit.rs/about_us.html" target="_blank" class="btn-slider">saznaj više</a>
                                 <a href="#contact" class="btn-slider">kontakt</a>
                             </div>
                         </div>
@@ -105,7 +105,7 @@ and open the template in the editor.
                                 Pružanje <span class="text-warning">celovitog rešenja</span> za proces arhiviranja
                             </h3> 
                             <div class="lead-slider-links text-center">
-                                <a href="#" class="btn-slider">saznaj više</a>
+                                <a href="http://trustit.rs/about_us.html" target="_blank" class="btn-slider">saznaj više</a>
                                 <a href="#contact" class="btn-slider">kontakt</a>
                             </div>
                         </div>
@@ -118,7 +118,7 @@ and open the template in the editor.
                                 Pružanje <span class="text-warning">rešenja</span> bazirana na Smart karticama
                             </h3> 
                             <div class="lead-slider-links text-center">
-                                <a href="#" class="btn-slider">saznaj više</a>
+                                <a href="http://trustit.rs/about_us.html" target="_blank" class="btn-slider">saznaj više</a>
                                 <a href="#contact" class="btn-slider">kontakt</a>
                             </div>
                         </div>
@@ -189,7 +189,7 @@ and open the template in the editor.
                         </li>
                     </ul>
                     <div class="aboutUs-btn text-center">
-                        <a href="#" class="btn btn-outline-info btn-lg px-5 text-uppercase">saznaj više</a>
+                        <a href="http://trustit.rs/about_us.html" target="_blank" class="btn btn-outline-info btn-lg px-5 text-uppercase">saznaj više</a>
                     </div>
                 </div>
             </section><!--section about-us end-->
@@ -742,22 +742,22 @@ and open the template in the editor.
                             <div class="col-md-6 mb-2 mb-md-0 px-0">
                                 <article class="cover-article d-flex align-items-center px-2">
                                     <div class="w-30">
-                                        <a href="http://trustit.rs/kontakt.html" target="_blank" class="fa fa-map-o text-white d-block"></a>
+                                        <a href="http://trustit.rs/contact_us.html" target="_blank" class="fa fa-map-o text-white d-block"></a>
                                     </div>
                                     <div class="w-70">
                                         <p class="text-white mb-0">TrustIT</p>
-                                        <a href="http://trustit.rs/kontakt.html" target="_blank" class="cover-link text-white d-block">Pronađite nas na mapi</a>
+                                        <a href="http://trustit.rs/contact_us.html" target="_blank" class="cover-link text-white d-block">Pronađite nas na mapi</a>
                                     </div>
                                 </article>
                             </div>
                             <div class="col-md-6 px-0">
                                 <article class="cover-article1 d-flex align-items-center px-2">
                                     <div class="w-30">
-                                        <a href="http://trustit.rs/kontakt.html" class="fa fa-envelope text-white d-block"></a>
+                                        <a href="http://trustit.rs/contact_us.html" class="fa fa-envelope text-white d-block"></a>
                                     </div>
                                     <div class="w-70">
                                         <p class="text-white mb-0">TrustIT</p>
-                                        <a href="http://trustit.rs/kontakt.html" class="cover-link text-white d-block">Pošaljite nam E-mail</a>
+                                        <a href="http://trustit.rs/contact_us.html" class="cover-link text-white d-block">Pošaljite nam E-mail</a>
                                     </div>
                                 </article>
                             </div>
