--- a/successfuly_send_message.html
+++ b/successfuly_send_message.html
@@ -3,4 +3,4 @@
 
 <h1>Uspesno poslata poruka!</h1>
 <p>Vasa poruka je uspesno poslata kompaniji Trust IT.</p>
-<p><a href="http://trustit.rs/index.html">Nazad</a>.</p>
+<p><a href="http://trustit.rs/index.html">Nazad</a></p>
