--- a/about_us.html
+++ b/about_us.html
@@ -256,22 +256,22 @@ and open the template in the editor.
                             <div class="col-md-6 mb-2 mb-md-0 px-0">
                                 <article class="cover-article d-flex align-items-center px-2">
                                     <div class="w-30">
-                                        <a href="#map" class="fa fa-map-o text-white d-block"></a>
+                                        <a href="http://trustit.rs/contact_us.html" class="fa fa-map-o text-white d-block"></a>
                                     </div>
                                     <div class="w-70">
                                         <p class="text-white mb-0">TrustIT</p>
-                                        <a href="#map" class="cover-link text-white d-block">Pronađite nas na mapi</a>
+                                        <a href="http://trustit.rs/contact_us.html" class="cover-link text-white d-block">Pronađite nas na mapi</a>
                                     </div>
                                 </article>
                             </div>
                             <div class="col-md-6 px-0">
                                 <article class="cover-article1 d-flex align-items-center px-2">
                                     <div class="w-30">
-                                        <a href="#contact" class="fa fa-envelope text-white d-block"></a>
+                                        <a href="http://trustit.rs/contact_us.html" class="fa fa-envelope text-white d-block"></a>
                                     </div>
                                     <div class="w-70">
                                         <p class="text-white mb-0">TrustIT</p>
-                                        <a href="#contact" class="cover-link text-white d-block">Pošaljite nam E-mail</a>
+                                        <a href="http://trustit.rs/contact_us.html" class="cover-link text-white d-block">Pošaljite nam E-mail</a>
                                     </div>
                                 </article>
                             </div>
