Finished page about_us.html

--- a/about_us.html
+++ b/about_us.html
@@ -69,6 +69,22 @@ and open the template in the editor.
         </header><!--header end-->
         <!--main start-->
         <main>
+            <!--lead section start-->
+            <section class="lead-section" style="background-image:linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70)), url(img/contact/home-003-B.gif); background-position: center center no-repeat; background-size:cover;">
+                <div class="container">
+                    <div class="row">
+			<div class="col-md-12">
+                            <h1 class="text-uppercase text-white">o nama</h1>
+                            <p class="text-white">
+                                Razvoj, implementacija, integracija i održavanje 
+                                dokument menadžment, ECM i BPM sistema, rešenja za 
+                                arhiviranje i mikrofilmovanje dokumentacije, 
+                                rešenja bazirana na Smart karticama.
+                            </p>
+			</div>
+                    </div>
+                </div>
+            </section><!--lead section end-->
             <!--about-us-section-->
             <section class="about-us-section" id="about-us">
                 <div class="container">
