--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@ and open the template in the editor.
             <!--lead slider start-->
             <section class="lead-slider-wrapper">
                 <ul class="owl-carousel list-unstyled lead-slider">
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70)), url(img/slider5.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70)), url(img/slider5.jpg);">
                         <div class="container">
                             <p class="text-center text-white">Trust IT</p>
                             <h2 class="text-center text-white text-uppercase animation" data-animation="zoom">programiranje</h2>
                             <h3 class="text-center text-white animation" data-animation="zoom">
-                                Izrada <span class="text-warning">softvera</span>, modernih i funkcionalnih <span class="text-warning">web aplikacija</span>
+                                Izrada <span class="text-warning">softvera</span>, modernih i funkcionalnih <span class="text-warning">sigurnosnih aplikacija</span>
                             </h3> 
                             <div class="lead-slider-links text-center">
                                 <a href="http://trustit.rs/about_us.html" target="_blank" class="btn-slider">saznaj više</a>
