Fixed some small issue in footer

--- a/error_message.html
+++ b/error_message.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<title>Greška</title>	
+<title>Greska</title>	
 
-<h1>Greška!</h1>
+<h1>Greska!</h1>
 <p>Proverite da li ste popunili sva polja pre slanja obrasca. </p>
-<p>Takođe osigurajte da postoji samo jedna adresa e-pošte.</p>
+<p>Takodje osigurajte da postoji samo jedna adresa e-poste.</p>
 <p><a href="JavaScript:history.go(-1);">Nazad</a></p>
