--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ and open the template in the editor.
         <link rel="icon" type="image/png" href="/img/favicon/favicon.ico">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="author" content="Marko Grujic - PIS">
         <meta name="description" content="">
         <meta name="keywords" content="">
@@ -649,7 +650,7 @@ and open the template in the editor.
                     </p>
                     <div class="row">
                         <div class="col-12 col-lg-7">
-                            <form class="contact-form" method="post" action="scripts-contact.php">
+                            <form class="contact-form" method="post" action="scripts-contact.php" accept-charset="UTF-8">
                                 <div class="row">
                                     <div class="col-12 col-sm-6">
                                         <div class="form-group">
@@ -703,6 +704,9 @@ and open the template in the editor.
                                 <a href="#about-us">o nama</a>
                             </li>
                             <li class="mb-2 mb-md-0">
+                                <a href="#activities">delatnosti</a>
+                            </li>
+                            <li class="mb-2 mb-md-0">
                                 <a href="#partners">partneri</a>
                             </li>
                             <li class="mb-2 mb-md-0">
@@ -710,9 +714,6 @@ and open the template in the editor.
                             </li>
                             <li class="mb-2 mb-md-0">
                                 <a href="#gallery">galerija</a>
-                            </li>
-                            <li class="mb-2 mb-md-0">
-                                <a href="#">reference</a>
                             </li>
                             <li class="mb-2 mb-md-0">
                                 <a href="#contact">kontakt</a>
