--- a/about_us.html
+++ b/about_us.html
@@ -10,6 +10,7 @@ and open the template in the editor.
         <link rel="icon" type="image/png" href="/img/favicon/favicon.ico">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="author" content="Marko Grujic - PIS">
         <meta name="description" content="">
         <meta name="keywords" content="">
@@ -204,7 +205,7 @@ and open the template in the editor.
                     </p>
                     <div class="row">
                         <div class="col-12 col-lg-7">
-                            <form class="contact-form" method="post" action="scripts-contact.php">
+                            <form class="contact-form" method="post" action="scripts-contact.php" accept-charset="UTF-8">
                                 <div class="row">
                                     <div class="col-12 col-sm-6">
                                         <div class="form-group">
